--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "electron-app",
-  "version": "0.0.1",
-  "description": "A minimal Electron app written with Typescript",
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "npm run build && electron ./dist/main.js"
-  },
-  "repository": "https://github.com/farhan-bs23/electron-project",
-  "keywords": [
-    "Electron",
-    "demo",
-    "typescript"
-  ],
-  "author": "Farhan Alam",
-  "license": "CC0-1.0",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "electron": "^17.1.2",
-    "eslint": "^7.32.0",
-    "typescript": "^4.5.5"
-  },
-  "dependencies": {}
+    "name": "electron-app",
+    "version": "0.0.1",
+    "description": "A minimal Electron app written with Typescript",
+    "scripts": {
+        "build": "tsc",
+        "watch": "tsc -w",
+        "lint": "eslint -c .eslintrc --ext .ts ./src",
+        "start": "npm run build && electron ./dist/main.js"
+    },
+    "repository": "https://github.com/farhan-bs23/electron-project",
+    "keywords": [
+        "Electron",
+        "demo",
+        "typescript"
+    ],
+    "author": "Farhan Alam",
+    "license": "CC0-1.0",
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^4.33.0",
+        "@typescript-eslint/parser": "^4.33.0",
+        "electron": "^17.1.2",
+        "eslint": "^7.32.0",
+        "eslint-config-prettier": "^8.5.0",
+        "typescript": "^4.5.5"
+    }
 }
