--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A minimal Electron app written with Typescript",
     "scripts": {
         "build": "tsc",
-        "watch": "tsc -w",
+        "watch": "tsc-watch --onSuccess \"electron ./dist/main.js\"",
         "lint": "eslint -c .eslintrc --ext .ts ./src",
         "start": "npm run build && electron ./dist/main.js"
     },
@@ -22,6 +22,7 @@
         "electron": "^17.1.2",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.5.0",
+        "tsc-watch": "^4.6.2",
         "typescript": "^4.5.5"
     }
 }
