--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        // "module": "commonjs",
+        "module": "commonjs",
         "noImplicitAny": true,
         "sourceMap": true,
         "outDir": "dist",
